Update README to document stages 1-5
Adds: auto-tracking flow, reading modes, Continue Reading, dedup rules,
clickable tag/author/ship filters, quick-filter chips, detail timeline,
new API endpoints (upsert, POST search, access log/list), full migrations
table V11-V18, ReadingHistory entity, readingStatus/eventType enums,
updated architecture diagram, test infrastructure, and lessons learned
from Java 25 / Mockito subclass mock maker and H2 integration testing.

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>